<resources>
    <string name="app_name">ChatApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <!-- Tab titles -->
    <string name="title_recent">Recent</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>

    <!--  NetworkActivity -->
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="json_error">Error parsing JSON.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="online_status">online_status</string>
    <string name="avatar_image">avatar_image</string>
    <string name="chat_activity">Chat</string>
    <string name="message_sound">Incoming message sound</string>
    <string name="bar_notification">Status bar notifications</string>
    <string name="contact_name_placeholder">Here goes contact name</string>
    <string name="phone_number_placeholder">Here goes phone number</string>
    <string name="message_placeholder">Enter Message ...</string>
    <string name="send_button">Send</string>
    <string name="personal_avatar">personal_avatar</string>
    <string name="message_text_placeholder">Here goes message text!</string>

</resources>
